--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-hook-form": "^6.15.5",
+    "react-scripts": "^1.1.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
